# ar-robot

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/lua/: CMakeLists.txt  LuaConfig.cmake.in
app/src/androidTest/java/com/vladd11/arshop/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  activity.cpp  activity.h  ar_ui_renderer.cpp  ar_ui_renderer.h  background_renderer.cpp  background_renderer.h  base64.cpp  base64.h  bindings.cpp  bindings.h  engine.cpp  engine.h  glError.cpp  glError.h  gl_util.cpp  gl_util.h  glm.h  helper.cpp  helper.h  jni_callbacks.cpp  jni_callbacks.h  luagraph.cpp  luagraph.h  lualines.cpp  lualines.h  luastructs.h  mongoose.c  plane_renderer.cpp  plane_renderer.h  renderer.cpp  renderer.h  round_radians.cpp  round_radians.h  safe_queue.cpp  safe_queue.h  server.cpp  server.h  shaders.cpp  shaders.h  (+2 more)
app/src/main/cpp/shaders/: background.cpp  background.h  default.cpp  default.h  loader.cpp  loader.h  plane.cpp  plane.h  raw.cpp  raw.h
app/src/main/cpp/verts/: plane.h  triangle.h
app/src/main/cpp/yuv2rgb/: YuvToRgb.cpp  YuvToRgb.h
app/src/main/java/com/vladd11/arshop/: ArSurfaceView.kt  MainActivity.kt  NativeEngine.kt  NativeRenderer.kt  PriceTagDetector.kt
app/src/main/java/com/vladd11/arshop/jni/: FrameCapturer.kt
app/src/main/java/com/vladd11/arshop/ui/: DummyFragment.kt
app/src/main/java/com/vladd11/arshop/ui/product/: ProductFragment.kt  ProductViewModel.kt
app/src/main/proto/: test.proto
app/src/main/res/layout/: activity_main.xml  fragment_product.xml
app/src/main/res/navigation/: graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vladd11/arshop/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libraries/include/: arcode_cxx_api.hpp  arcore_c_api.h
scripts/: pathfinder.lua  script.lua
